# Japanese-RP-Bench

./: README.md  pyproject.toml  visualize.ipynb
annotated_sample/: annotated_sample.jsonl
configs/: eval_config.yaml
conversations/: Aratako-calm3-22b-RP-v2_Aratako-Japanese-RP-Bench-testdata-SFW.jsonl  Qwen-Qwen2.5-32B-Instruct_Aratako-Japanese-RP-Bench-testdata-SFW.jsonl  Qwen-Qwen2.5-72B-Instruct_Aratako-Japanese-RP-Bench-testdata-SFW.jsonl  Qwen-Qwen2.5-7B-Instruct_Aratako-Japanese-RP-Bench-testdata-SFW.jsonl  claude-3-5-sonnet-20240620_Aratako-Japanese-RP-Bench-testdata-SFW.jsonl  claude-3-haiku-20240307_Aratako-Japanese-RP-Bench-testdata-SFW.jsonl  claude-3-opus-20240229_Aratako-Japanese-RP-Bench-testdata-SFW.jsonl  command-r-08-2024_Aratako-Japanese-RP-Bench-testdata-SFW.jsonl  command-r-plus-08-2024_Aratako-Japanese-RP-Bench-testdata-SFW.jsonl  cyberagent-Llama-3.1-70B-Japanese-Instruct-2407_Aratako-Japanese-RP-Bench-testdata-SFW.jsonl  cyberagent-Mistral-Nemo-Japanese-Instruct-2408_Aratako-Japanese-RP-Bench-testdata-SFW.jsonl  cyberagent-calm3-22b-chat_Aratako-Japanese-RP-Bench-testdata-SFW.jsonl  deepseek-chat_Aratako-Japanese-RP-Bench-testdata-SFW.jsonl  elyza-Llama-3-ELYZA-JP-8B_Aratako-Japanese-RP-Bench-testdata-SFW.jsonl  gemini-1.5-flash-002_Aratako-Japanese-RP-Bench-testdata-SFW.jsonl  gemini-1.5-flash_Aratako-Japanese-RP-Bench-testdata-SFW.jsonl  gemini-1.5-pro-002_Aratako-Japanese-RP-Bench-testdata-SFW.jsonl  gemini-1.5-pro_Aratako-Japanese-RP-Bench-testdata-SFW.jsonl  google-gemma-2-27b-it_Aratako-Japanese-RP-Bench-testdata-SFW.jsonl  (+13 more)
(+40 files in other folders)
